--- a/ws/package.json
+++ b/ws/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev" : "tsc -b && node dist/index.js"
+    "dev": "tsc -b && node dist/index.js"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +13,7 @@
   "dependencies": {
     "@types/express": "^5.0.1",
     "@types/ws": "^8.18.1",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "ws": "^8.18.1"
   }
