--- a/ws/package.json
+++ b/ws/package.json
@@ -12,9 +12,12 @@
   "description": "",
   "dependencies": {
     "@types/express": "^5.0.1",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/ws": "^8.18.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "ws": "^8.18.1"
   }
 }
